# scholia

./: .gitignore  LICENSE  README.md  pyproject.toml
.serena/: project.yml
.superpowers/brainstorm/829520-1773467641/: .server-stopped  architecture.html  module-structure.html
docs/plans/: 2026-02-13-mcp-consolidation-design.md  2026-02-13-mcp-consolidation-plan.md  2026-02-13-unified-dashboard-design.md  2026-02-13-unified-dashboard-plan.md
docs/superpowers/plans/: 2026-03-25-texwatch-v030.md
docs/superpowers/specs/: 2026-03-25-texwatch-v030-design.md
scholia/: __init__.py  cli.py  comments.py  compiler.py  config.py  imaging.py  mcp_server.py  server.py  structure.py  watcher.py
scholia/static/: index.html  style.css  viewer.js
skills/: scholia.md  texwatch.md
tests/: __init__.py  test_awareness.py  test_bibliography.py  test_changes.py  test_cli.py  test_comments.py  test_compiler.py  test_config.py  test_digest.py  test_environments.py  test_imaging.py  test_labels.py  test_mcp.py  test_persistence.py  test_server.py  test_structure.py  test_synctex.py  test_watcher.py  test_workspace.py
texwatch/: __init__.py  awareness.py  bibliography.py  changes.py  cli.py  comments.py  compiler.py  config.py  digest.py  environments.py  imaging.py  labels.py  mcp_server.py  persistence.py  server.py  structure.py  synctex.py  watcher.py  workspace.py
texwatch/static/: autocomplete.js  awareness.js  dashboard.html  dashboard.js  editor.js  filetree.js  index.html  snippets.js  style.css  viewer.js
